--- a/brascolor/src/main/resources/templates/components/home.html
+++ b/brascolor/src/main/resources/templates/components/home.html
@@ -1,7 +1,7 @@
 <!-- FILEPATH: /c:/Users/caiob/OneDrive/Eu/OneDrive/Documentos/Codes (CESAR and Others)/2nd Semester (2023)/BD/Unit 2/webapp/brascolor/src/main/resources/templates/home.html -->
 
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>My Home Page</title>
   </head>
@@ -9,9 +9,9 @@
     <h1>Welcome to my website!</h1>
     <p>Here you will find all sorts of interesting things.</p>
     <ul>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="blog.html">My Blog</a></li>
-      <li><a href="contact.html">Contact Me</a></li>
+      <li><a th:href="@{/about}">About Me</a></li>
+      <li><a th:href="@{/blog}">My Blog</a></li>
+      <li><a th:href="@{/contact}">Contact Me</a></li>
     </ul>
   </body>
 </html>
