--- a/brascolor/src/main/resources/templates/components/login.html
+++ b/brascolor/src/main/resources/templates/components/login.html
@@ -10,8 +10,8 @@
     <h1>Login</h1>
     <form th:action="@{/login}" method="post">
         <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
         </div>
         <div>
             <label for="password">Password:</label>
