changed login to employee id

--- a/brascolor/src/main/resources/templates/components/login.html
+++ b/brascolor/src/main/resources/templates/components/login.html
@@ -10,11 +10,11 @@
     <h1>Login</h1>
     <form th:action="@{/login}" method="post">
         <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="idFunc">ID do Funcionário:</label>
+            <input type="text" id="idFunc" name="idFunc" required>
         </div>
         <div>
-            <label for="password">Password:</label>
+            <label for="password">Senha:</label>
             <input type="password" id="password" name="password" required>
         </div>
         <button type="submit">Login</button>
